finished off game for demo

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 </head>
 
 <body>
-
     <div id="content"></div>
+    <button id="start"> Click here first!</button>
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/bundle.js"></script>
-
 </body>
 
 </html>
